Fixed case table divider from being visible to transparent

--- a/apps/dg/resources/dg.css
+++ b/apps/dg/resources/dg.css
@@ -1111,8 +1111,10 @@ input.dg-editor-text {
     border-right-width: thick;
 }
 
-.dg.ace.split-divider {
+.dg.ace.dg-split-divider {
     z-index: 0;
+    background: transparent;
+    border: 0;
 }
 @keyframes pulse {
     from {
